--- a/src/index.css
+++ b/src/index.css
@@ -67,6 +67,7 @@
   --gutter-bg: #f4f4f1;
   --success: #3f8a4f;
   --danger: #b4433a;
+  --danger-bg: #fbeceb;
   --hover-bg: #e7e7e4;
   --info-bg: #ececea;
   --info-bg-hover: #dededa;
